--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   numberpicker: ^2.1.1
   provider: ^6.0.5
+  flutter_neumorphic: ^3.2.0
 
 dev_dependencies:
   flutter_test:
